# r-type-mirror

./: .gitignore  .gitignore.back  CMakeLists.txt  Doxyfile  InstallSFML.cmake  Makefile  README.md  main.cpp  mainpage.md  poc.md  rfcprotocol.txt  run_build  testClient.cpp
.github/workflows/: build.yml
binaries/: rtype_client  rtype_server
cmake/: FindSFML.cmake  SetupSFML.cmake
docs/: CollisionSystem_8hpp.html  CollisionSystem_8hpp__dep__incl.map  CollisionSystem_8hpp__incl.map  CollisionSystem_8hpp__incl.md5  CollisionSystem_8hpp_source.html  Components_8hpp.js  Components_8hpp__dep__incl.map  Components_8hpp__dep__incl.md5  Components_8hpp__incl.md5  GameEngine_8hpp.html  GameEngine_8hpp.js  InputSystem_8hpp.js  InputSystem_8hpp__dep__incl.map  InputSystem_8hpp__dep__incl.md5  InputSystem_8hpp__incl.map  InputSystem_8hpp_source.html  MissileSystem_8hpp.html  MissileSystem_8hpp__incl.map  MissileSystem_8hpp_source.html  MovementSystem_8hpp.html  MovementSystem_8hpp.js  MovementSystem_8hpp__dep__incl.map  MovementSystem_8hpp__dep__incl.md5  MovementSystem_8hpp__incl.map  MovementSystem_8hpp_source.html  NetworkProtocol_8hpp.html  NetworkProtocol_8hpp__dep__incl.map  NetworkProtocol_8hpp__dep__incl.md5  NetworkProtocol_8hpp__incl.map  NetworkProtocol_8hpp__incl.md5  NetworkProtocol_8hpp_a31decf49dac3ae6a95dd28cb3607e37e_cgraph.md5  NetworkProtocol_8hpp_source.html  PowerUpSystem_8hpp.html  PowerUpSystem_8hpp.js  PowerUpSystem_8hpp__incl.map  PowerUpSystem_8hpp_source.html  README_8md.html  RenderSystem_8hpp.html  RenderSystem_8hpp.js  RenderSystem_8hpp__dep__incl.map  (+439 more)
docs/html/: CMakeLists_8txt.html  CollisionSystem_8cpp.html  CollisionSystem_8cpp__incl.map  CollisionSystem_8cpp__incl.md5  CollisionSystem_8hpp.html  CollisionSystem_8hpp__dep__incl.map  CollisionSystem_8hpp__dep__incl.md5  CollisionSystem_8hpp__incl.map  CollisionSystem_8hpp__incl.md5  CollisionSystem_8hpp_source.html  Components_8hpp.html  Components_8hpp__dep__incl.map  Components_8hpp__dep__incl.md5  Components_8hpp__incl.map  Components_8hpp_source.html  GameEngine_8cpp.html  GameEngine_8cpp__incl.map  GameEngine_8cpp__incl.md5  GameEngine_8hpp__incl.map  GameEngine_8hpp__incl.md5  GameEngine_8hpp_source.html  GameLoop_8cpp.html  GameLoop_8cpp__incl.map  GameLoop_8cpp__incl.md5  GameLoop_8hpp.html  GameLoop_8hpp.js  GameLoop_8hpp__dep__incl.map  GameLoop_8hpp__dep__incl.md5  GameLoop_8hpp__incl.map  GameLoop_8hpp__incl.md5  GameLoop_8hpp_source.html  InputSystem_8cpp.html  InputSystem_8cpp__incl.map  InputSystem_8cpp__incl.md5  InputSystem_8hpp.html  InputSystem_8hpp__dep__incl.map  InputSystem_8hpp__dep__incl.md5  InputSystem_8hpp__incl.map  InputSystem_8hpp__incl.md5  InputSystem_8hpp_source.html  (+634 more)
docs/latex/: CMakeLists_8txt.tex  CollisionSystem_8cpp.tex  CollisionSystem_8cpp__incl.md5  CollisionSystem_8hpp.tex  CollisionSystem_8hpp__dep__incl.md5  CollisionSystem_8hpp__incl.md5  CollisionSystem_8hpp_source.tex  Components_8hpp.tex  Components_8hpp__dep__incl.md5  Components_8hpp__incl.md5  Components_8hpp_source.tex  GameEngine_8cpp.tex  GameEngine_8cpp__incl.md5  GameEngine_8hpp.tex  GameEngine_8hpp__incl.md5  GameEngine_8hpp_source.tex  GameLoop_8cpp.tex  GameLoop_8cpp__incl.md5  GameLoop_8hpp.tex  GameLoop_8hpp__dep__incl.md5  GameLoop_8hpp__incl.md5  GameLoop_8hpp_source.tex  InputSystem_8cpp.tex  InputSystem_8cpp__incl.md5  InputSystem_8hpp.tex  InputSystem_8hpp__dep__incl.md5  InputSystem_8hpp__incl.md5  InputSystem_8hpp_source.tex  MissileSystem_8cpp.tex  MissileSystem_8cpp__incl.md5  MissileSystem_8hpp.tex  MissileSystem_8hpp__dep__incl.md5  MissileSystem_8hpp__incl.md5  MissileSystem_8hpp_source.tex  MovementSystem_8cpp.tex  MovementSystem_8cpp__incl.md5  MovementSystem_8hpp.tex  MovementSystem_8hpp__dep__incl.md5  MovementSystem_8hpp__incl.md5  MovementSystem_8hpp_source.tex  (+352 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_19.js  all_1b.js  all_1c.js  all_1d.js  all_1f.js  all_2.js  all_23.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_8.js  defines_0.js  defines_1.js  enums_1.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  (+49 more)
include/: CollisionSystem.hpp  Components.hpp  GameLoop.hpp  GuiLoop.hpp  InputSystem.hpp  InterThreadData.hpp  MovementSystem.hpp  NetworkProtocol.hpp  RenderSystem.hpp  Renderer.hpp  ResourceManager.hpp  SafeQueue.hpp  TcpClient.hpp  TcpServer.hpp  Timer.hpp  UdpClient.hpp  UdpServer.hpp  WaveSystem.hpp  client.hpp  ecs.hpp  mainpage.md  server.hpp  tcp.hpp  udp.hpp
include/args/: Args.hpp
include/engine/: EntityFactory.hpp  StageFactory.hpp
include/game/: GameLoop.hpp  GamePlayLoop.hpp  GuiLoop.hpp
include/network/: NetworkManager.hpp  NetworkProtocol.hpp  SafeQueue.hpp  TcpClient.hpp  TcpServer.hpp  UdpClient.hpp  UdpReceiver.hpp  UdpSender.hpp  UdpServer.hpp
server/: Makefile
server/src/: tcp.cpp  (+1 more)
src/: CollisionSystem.cpp  InputSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  ResourceManager.cpp  WaveSystem.cpp  client_test.cpp  main.cpp
src/args/: Args.cpp  CMakeLists.txt
src/client/: Args.cpp  Args.hpp  CMakeLists.txt  ClientManager.cpp  ClientManager.hpp  DisplayLoop.cpp  DisplayLoop.hpp  GuiLoop.cpp  Makefile  PacketInterpreter.cpp  PacketInterpreter.hpp  TcpClient.cpp  UdpClient.cpp  UdpReceiver.cpp  UdpReceiver.hpp  main.cpp
src/game/: CMakeLists.txt  GameLoop.cpp  GamePlayLoop.cpp  GuiLoop.cpp
src/network/: CMakeLists.txt  NetworkManager.cpp  UdpReceiver.cpp  UdpSender.cpp
src/packet/: CMakeLists.txt  ClientPacketInterpreter.cpp  PacketInterpreter.cpp  ServerPacketInterpreter.cpp
src/protocol/: CMakeLists.txt  Protocol.cpp
src/server/: Args.cpp  Args.hpp  CMakeLists.txt  GameLoop.cpp  GameLoop.hpp  Makefile  NetworkManager.cpp  NetworkManager.hpp  PacketInterpreter.cpp  PacketInterpreter.hpp  TcpServer.cpp  UdpReceiver.cpp  UdpReceiver.hpp  UdpSender.cpp  UdpSender.hpp  UdpServer.cpp  main.cpp  tcp.cpp  udp.cpp
(+160 files in other folders)
